# speedtest

./: .gitignore  .markdownlint.json  CHANGELOG.md  MANIFEST.in  README.md  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: feature-request.md
.github/workflows/: codeql-analysis.yml  python-app.yml
requirements/: dev.txt  release.txt
src/: __init__.py  __main__.py  cli.py  core.py  utils.py
src/data/: config.json
src/speedtest/: __init__.py  __main__.py  cli.py  config.py  core.py  speedtest.py  utils.py
