[metadata]
name = cli-template
author = hentai-chan
author-email = dev.hentai-chan@outlook.com
url = https://github.com/Advanced-Systems/cli-template
license-file = LICENSE
license = GPLv3
description = A modern CLI template for python scripts.
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >= 3.8
classifiers = Development Status :: 3 - Alpha
              Intended Audience :: Developers
              Natural Language :: English
              Programming Language :: Python :: 3.8
              Operating System :: OS Independent
              Topic :: Terminals
              Topic :: Utilities
keywords = utils terminal application template
project_urls = 
    Source Code = https://github.com/Advanced-Systems/cli-template
    Bug Tracker = https://github.com/Advanced-Systems/cli-template/issues

[options]
packages = find:
include_package_data = true
