[metadata]
name = speedtest
author = hentai-chan
author-email = dev.hentai-chan@outlook.com
url = https://github.com/hentai-chan/speedtest
license-file = LICENSE
license = GPLv3
description = Terminal application for assessing the performance of your network connectivity.
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >= 3.8
classifiers = Development Status :: 3 - Alpha
              Intended Audience :: Developers
              Natural Language :: English
              Programming Language :: Python :: 3.8
              Operating System :: OS Independent
              Topic :: Terminals
              Topic :: Utilities
keywords = utils terminal application speedtest
project_urls = 
    Source Code = https://github.com/hentai-chan/speedtest
    Bug Tracker = https://github.com/hentai-chan/speedtest/issues

[options]
packages = find:
include_package_data = true
